class Resistor:
    def __init__(self, name: str, bus1: str, bus2: str, r: float):
        self.name = name
        self.bus1 = bus1
        self.bus2 = bus2
        self.r = r
        self.g = self.calc_g

    def calc_g(self):
        # Calculates the conductance of resistor
        self.g = float
        self.g = 1 / self.r
